WithSecure/ShipmentDispatchApp/force-app/main/default/objects/DispatchCarrier__c/DispatchCarrier__c.object-meta.xml
<CustomObject>
    <label>Dispatch Carrier</label>
    <nameField>
        <label>Shipment Request Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DispatchCarriers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>