WithSecure/ShipmentDispatchApp/force-app/main/default/objects/DispatchCarrier__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <description>Shipment carrier partner</description>
    <label>Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>Fedex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>