WithSecure/ShipmentDispatchApp/force-app/main/default/objects/DispatchCarrier__c/fields/Estimated_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery__c</fullName>
    <description>Estimated Delivery</description>
    <label>Estimated Delivery</label>
    <type>DateTime</type>
</CustomField>