WithSecure/ShipmentDispatchApp/force-app/main/default/objects/DispatchCarrier__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Org A Shipment record Id</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>