WithSecure/ShipmentDispatchApp/force-app/main/default/objects/DispatchCarrier__c/fields/Tracking_ID__c.field-meta.xml
<CustomField>
    <fullName>Tracking_ID__c</fullName>
    <description>Tracking Id of Shipment</description>
    <label>Tracking ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>