WithSecure/ShipmentDispatchApp/force-app/main/default/objects/DispatchCarrier__c/validationRules/Tracking_Id.validationRule-meta.xml
<ValidationRule>
    <fullName>Tracking_Id</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Tracking_ID__c )</errorConditionFormula>
    <errorMessage>Tracking Id is required for Dispatching</errorMessage>
</ValidationRule>